# Resper

./: README.md  package-lock.json  package.json
backend/: README.md  docker-compose.ci.yml
backend/.github/workflows/: test.yaml
backend/backend/: main.py  pyproject.toml
backend/backend/app/: factory.py
backend/backend/app/api/: __init__.py  ollama.py
backend/backend/app/core/: config.py
components/Index/: index.js
pages/: index.js
public/: inject.js  manifest.json
