[tool.poetry]
name = "backend-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.98.0"
uvicorn = "^0.23.2"
pydantic = "^1.10.12"
requests = "^2.31.0"
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"
setuptools = "^70.2.0"
python-dotenv = "^1.0.1"
ollama = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
ipython = "^8.16.1"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
